tests/invalid/dquote-not-closed.cipl
int main() {
    writeln("
    valid
    xyz")

    writeln("
        still valid
    );

    writeln(
    "

    // next line is invalid missing dquote at 13:4
    ");
}